--- a/repo/需求規格.md
+++ b/repo/需求規格.md
@@ -1,1 +1,17 @@
+![image](https://github.com/tairong123/course_selection/blob/master/repo/use%20case.png)  
 
+![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specificationadd.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specification2.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specificationdelete.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specification4.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specification5.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specification6.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specification7.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specification8.png)  
