--- a/repo/1系統需求.md
+++ b/repo/1系統需求.md
@@ -1,3 +1,3 @@
-![image](https://github.com/tairong123/course_selection/blob/master/repo/%E9%9C%80%E6%B1%821%20(2).png)  
+![image](https://github.com/tairong123/course_selection/blob/master/repo/need1.png)  
 
-![image](https://github.com/tairong123/course_selection/blob/master/repo/%E9%9C%80%E6%B1%822%20(2).png)  
+![image](https://github.com/tairong123/course_selection/blob/master/repo/need2.png)  
