--- a/repo/4序列圖.md
+++ b/repo/4序列圖.md
@@ -1,1 +1,3 @@
 ![image](https://github.com/tairong123/course_selection/blob/master/repo/%E5%BA%8F%E5%88%97%E5%9C%96.drawio.png)
+
+![mage](https://github.com/tairong123/course_selection/blob/master/repo/%E5%9C%961.png)
