--- a/repo/5活動圖.md
+++ b/repo/5活動圖.md
@@ -1,3 +1,5 @@
-![image](https://github.com/tairong123/course_selection/blob/master/repo/%E6%B4%BB%E5%8B%95%E5%9C%96.drawio.png)
+![image](https://github.com/tairong123/course_selection/blob/master/repo/%E6%B4%BB%E5%8B%951.png)
 
 ![image](https://github.com/tairong123/course_selection/blob/master/repo/%E5%9C%962.png)
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/%E6%B4%BB%E5%8B%952.png)
