--- a/repo/1系統需求.md
+++ b/repo/1系統需求.md
@@ -1,4 +1,6 @@
-![image](https://github.com/tairong123/course_selection/blob/master/repo/need3.png)  
+![image](https://github.com/tairong123/course_selection/blob/master/repo/%E5%8A%A0%E9%81%B81.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/%E5%8A%A0%E9%81%B82.png)
 
 ![image](https://github.com/tairong123/course_selection/blob/master/repo/need4.png)  
 
