--- a/repo/2需求規格.md
+++ b/repo/2需求規格.md
@@ -8,6 +8,12 @@
 
 ![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specification4.png)  
 
+![image](https://github.com/tairong123/course_selection/blob/master/repo/%E9%80%80%E9%81%B81.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/%E9%80%80%E9%81%B82.png)  
+
+![image](https://github.com/tairong123/course_selection/blob/master/repo/%E9%80%80%E9%81%B83.png) 
+
 ![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specification5.png)  
 
 ![image](https://github.com/tairong123/course_selection/blob/master/repo/Use%20Case%20Specification6.png)  
